environment/kubernetes/manifests/admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: hostnetwork-allowed-only-in-system
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: "object.spec.hostNetwork == false || request.namespace in ['kube-system','kube-flannel']"
      message: "hostNetwork is allowed only in kube-system and kube-flannel."
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: hostnetwork-allowed-only-in-system-binding
spec:
  policyName: hostnetwork-allowed-only-in-system
  validationActions: ["Deny"]
